--- a/index.go.html
+++ b/index.go.html
@@ -206,16 +206,24 @@
 <p>
 <table>
     <tr>
-        <th class="centered">Player List{{ if .Queried.PlayerCount }} ({{ .Queried.PlayerCount }}) {{ end }}</th>
+        <th>Player List{{ if .Queried.PlayerCount }} ({{ .Queried.PlayerCount }}) {{ end }}</th>
     </tr>
     <tr>
         <td class="centered"><a href="{{ .ToggleQuery "players" }}" title="Collapse Player List.">Collapse Player List</a></td>
     </tr>
     {{ if gt (len (.Queried.GetPlayers .Data.ShowAnonymousPlayers)) 0 }}
+    {{ if .Data.ShowAnonymousPlayers }}
     {{ range .Queried.Players }}
     <tr>
-        <td>{{ if or .Data.ShowAnonymousPlayers (ne . "Anonymous Player") }}{{ . }}{{ end }}</td>
+        <td>{{ . }}</td>
     </tr>
+    {{ end }}
+    {{ else }}
+    {{ range .Queried.Players }}
+    <tr>
+        <td>{{ if ne . "Anonymous Player" }}{{ . }}{{ end }}</td>
+    </tr>
+    {{ end }}
     {{ end }}
     {{ else }}
     <tr>
@@ -232,7 +240,7 @@
 <p>
 <table>
     <tr>
-        <th class="centered">Mod List ({{ .Queried.PlayerCount }})</th>
+        <th>Mod List ({{ .Queried.PlayerCount }})</th>
     </tr>
     <tr>
         <td class="centered"><a href="{{ .ToggleQuery "mods" }}" title="Collapse Mod List.">Collapse Mod List</a></td>
