Fix some HTML rendering.

--- a/index.go.html
+++ b/index.go.html
@@ -220,9 +220,11 @@
     {{ end }}
     {{ else }}
     {{ range .Queried.Players }}
+	{{ if ne . "Anonymous Player" }}
     <tr>
-        <td>{{ if ne . "Anonymous Player" }}{{ . }}{{ end }}</td>
+        <td>{{ . }}</td>
     </tr>
+	{{ end }}
     {{ end }}
     {{ end }}
     {{ else }}
